# permutations_library

./: .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.md
.github/workflows/: ci.yml  docs.yml
docs/doxygen/: layout.xml
docs/doxygen/templates/: footer.html  header.html  style.css
include/: iterative_algorithms.h  optimized_algorithms.h  permutation_core.h  permutation_types.h  permutations.h  recursive_algorithms.h
src/algorithms/core/: adaptive.c  benchmark.c  iterator.c  testing.c  unified_interface.c  visualization.c
src/algorithms/iterative/: factorial_system.c  inversion_table.c  narayana.c  plus_one.c  reverse_narayana.c
src/algorithms/optimized/: binary_masks.c  cycle_leader.c  heap.c  johnson_trotter.c  minimal_change.c  pseudo_lexicographic.c
src/algorithms/recursive/: backtrack.c  constraints.c  lexicographic.c  multiset.c  recursive_swap.c
